--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,12 @@
+@book{alberts,
+author = {Alberts, B. and Johnson, A. and Lewis, J. and Raff, M. and Roberts, K. and Walter, P.},
+title = {Molecular biology of the cell, 5th edition},
+publisher = {Garland Science},
+year = {2014},
+edition = {6},
+month = {11},
+isbn = {0815344325}
+}
 @article{bwa,
 author = "Heng Li",
 journal = "arXiv:1303.3997v2",
